# ai-cv-maker

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  README.md  azure-pipelines.yml  docker-compose.yml  nx.json  package-lock.json  package.json  skills-lock.json  tsconfig.base.json
.github/workflows/: deploy.yml
apps/admin-api/: Dockerfile  project.json  (+3 more)
apps/admin-api-e2e/: jest.config.cts  project.json
apps/llm-service/: Dockerfile  project.json  pyproject.toml
apps/llm-service/app/: guards.py  main.py  schemas.py  settings.py
apps/llm-service/app/chains/: chat_chain.py  cover_letter_chain.py  cv_chain.py  profile_selector_chain.py  test_chat_chain.py  test_cover_letter_chain.py  test_global_preferences.py  test_profile_selector_chain.py  test_user_chat_preferences.py  usage.py  user_chat_chain.py
apps/llm-service/app/grpc/: llm_service_pb2.py  llm_service_pb2_grpc.py  metrics_interceptor.py  servicer.py
apps/llm-service/app/preprocessing/: link_enricher.py  test_link_enricher.py
apps/llm-service/evals/: evaluators.py  run_evals.py  targets.py
apps/llm-service/evals/fixtures/: cover_letter_with_prefs_cases.jsonl  enhance_cases.jsonl  extract_cases.jsonl  generate_cases.jsonl  generate_with_prefs_cases.jsonl  optimize_cases.jsonl  optimize_with_prefs_cases.jsonl  security_cases.jsonl
doc/: README.md
infra/: apps.tf  cicd.tf  database.tf  lb.tf  main.tf  network.tf  outputs.tf  providers.tf  secrets.tf  terraform.tfvars.example  tfplan  variables.tf
memory/: MEMORY.md  project_main_app.md
proto/: llm_service.proto
(+394 files in other folders)
