[project]
name = "llm-service"
version = "0.1.0"
description = "AI CV generation microservice using FastAPI and LangChain"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "anthropic>=0.45.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "prometheus-client>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
